overflow issue on mobile, fixed

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -32,7 +32,6 @@ body {
 	font-family: 'Raleway', sans-serif;
 	font-style: normal;
 	height: 100vh;
-	overflow: scroll;
 }
 
 .section1, .section2 {
